prototypes/p3b/tests/invalid/11_no_try_catch.hll
// MUST BE REJECTED: try/catch does not exist in HLL
// Errors are handled via Result<T,E> and match, not exceptions

function main() {
    try {
        let x = riskyOperation()
    } catch (Exception e) {
        printLn("caught")
    }
}
